--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -16,6 +16,9 @@
           <li class="nav-item">
             <%= link_to "Time Entries", posts_path, class: "nav-link #{active?(posts_path)}" %>
           </li>
+
+          <%= render 'shared/audit_log_tab' if policy(AuditLog).index? %>
+          
           <li class="nav-item">
             <%= link_to "Add New Entry", new_post_path, id: "new_post_from_nav", class: "nav-link #{active?(new_post_path)}" %>
           </li>
