84. Bringing in Live Data to the Admin Management Dashboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,7 @@
 @import "../../../bourbon/bourbon";
 @import "./post.scss";
+@import "./admin_homepage.scss";
+
 
 .custom-nav {
   margin-top: 55px;
