--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import "../../../bourbon/bourbon";
 @import "./post.scss";
 @import "./admin_homepage.scss";
-
+@import "./employee_homepage.scss";
 
 .custom-nav {
   margin-top: 55px;
