--- a/app/views/static/_pending_audit_confirmations.html.erb
+++ b/app/views/static/_pending_audit_confirmations.html.erb
@@ -1,3 +1,8 @@
 <% pending_audit_confirmations.each do |pending_audit_confirmation| %>
-  <%= link_to "I confirm that I did not perform any overtime for the week of: #{pending_audit_confirmation.start_date}", root_path, class: 'btn btn-primary btn-lg btn-block d-block m-2', data: { confirm: "Are you sure you want to confirm that you did not perform any overtime?", turbo_confirm: "Are you sure?" } %>
+  <%= link_to "I confirm that I did not perform any overtime for the week of: #{pending_audit_confirmation.start_date}", 
+      confirm_audit_log_path(pending_audit_confirmation), 
+      class: 'btn btn-primary btn-lg btn-block d-block m-2',
+      id: "confirm_#{pending_audit_confirmation.id}",
+      data: { confirm: "Are you sure you want to confirm that you did not perform any overtime?", 
+      turbo_confirm: "Are you sure?" } %>
 <% end %>
