--- a/app/views/static/_pending_audit_confirmations.html.erb
+++ b/app/views/static/_pending_audit_confirmations.html.erb
@@ -4,5 +4,5 @@
       class: 'btn btn-primary btn-lg btn-block d-block m-2',
       id: "confirm_#{pending_audit_confirmation.id}",
       data: { confirm: "Are you sure you want to confirm that you did not perform any overtime?", 
-      turbo_confirm: "Are you sure?" } %>
+      turbo_confirm: "Are you sure?" }, method: :get %>
 <% end %>
