--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -12,10 +12,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <%= link_to "Home", root_path, class: "nav-link #{active?(root_path)}" %>
+            <%= link_to root_path, class: "nav-link #{active?(root_path)}" do %>
+              <i class="bi bi-house-door-fill"></i>
+              Home
+            <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to "Time Entries", posts_path, class: "nav-link #{active?(posts_path)}" %>
+            <%= link_to "Entries", posts_path, class: "nav-link #{active?(posts_path)}" %>
           </li>
 
           <%= render 'shared/audit_log_tab' if policy(AuditLog).index? %>
