--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -17,26 +17,18 @@
               Home
             <% end %>
           </li>
-          <li class="nav-item">
-            <%= link_to "Entries", posts_path, class: "nav-link #{active?(posts_path)}" %>
-          </li>
 
-          <%= render 'shared/audit_log_tab' if policy(AuditLog).index? %>
+          <%= render 'shared/employee_nav_items' if employee? %>
+
+          <%= render 'shared/audit_log_tab' if admin? %>
           
-          <li class="nav-item">
-            <%= link_to "Request Overtime", new_post_path, id: "new_post_from_nav", class: "nav-link #{active?(new_post_path)}" %>
-          </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Account
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <% if current_user.type == 'AdminUser' %>
-                <li>
-                  <%= link_to "Admin Dashboard", admin_root_path, class: "dropdown-item"  %>
-                </li>
-                <li><hr class="dropdown-divider"></li>
-              <% end %>
+              <%= render 'shared/audit_log_tab' if admin? %>
               <li>
                 <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
               </li>
