--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -28,7 +28,7 @@
               Account
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <%= render 'shared/audit_log_tab' if admin? %>
+              <%= render 'shared/admin_dropdown' if admin? %>
               <li>
                 <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
               </li>
