116. Building in Custom Mobile Responsive Elements into the View

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,18 +6,12 @@
 	<thead>
 		<tr>
 			<th>
-				#
-			</th>
-			<th>
 				Overtime Requested
 			</th>
 			<th>
 				Date
 			</th>
-			<th>
-				User
-			</th>
-			<th>
+			<th class='d-none d-sm-table-cell'>
 				Rationale
 			</th>
 			<th>
