--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,7 +6,7 @@
     <%= post.date %>
   </td>
   <td class='d-none d-sm-table-cell'>
-    <%= link_to truncate(post.rationale), post %>
+    <%= link_to truncate(post.work_performed), post %>
   </td>
   <td>
     <%= status_label post.status %>
